--- a/sections/data.tex
+++ b/sections/data.tex
@@ -1,6 +1,8 @@
 \section{Data}
 \label{sec:data}
 
+The Dark Energy Spectroscopic Instrument (DESI) uses robotically-driven fibers to collect $5000$ spectra simultaneously and is designed to deliver an unparalleled volume of spectroscopic data that will enable future analyses to deepen our understanding of the energy contents of the universe, specifically, the dynamic of dark energy equation of state \citep{aghamousa2016desi}. Even though the primary focus of DESI is dark energy, assuming imaging systematics are under control, DESI along with other upcoming surveys, such as Rubin Observatory and SphereX, are expected to yield unprecedented constraints on $\fnl$ as well \citep[see, e.g.,][]{Heinrich2022AAS...24020203H}. Luminous red galaxies (LRGs) constitute one of the primary targets for DESI spectroscopy. DESI is designed to collect spectra of millions of LRGs covering the redshift range of $0.4<z<1.0$ throughout its five-year mission. LRGs are massive galaxies that occupy massive halos, lack active star formation, and are one of the highly biased tracers of dark matter gravitational field. A distinct break around 4000 \AA~in the spectrum of LRGs is often utilized to determine their redshifts accurately. LRGs are widely targeted in previous galaxy redshift surveys \citep[see, e.g.,][]{eisenstein2001spectroscopic, prakash2016sdss}, and their clustering and redshift properties are well studied \citep[see, e.g.,][]{ross2020MNRAS.498.2354R, gilmarin2020MNRAS.498.2492G, bautista2021MNRAS.500..736B, chapman2022MNRAS.516..617C}. DESI spectroscopy selects its LRG targets from photometry of three ground-based surveys that observed the sky in the optical $g$, $r$, and $z$ bands between 2014 and 2019: the Mayall $z$-band Legacy Survey using the Mayall telescope at Kitt Peak \citep[MzLS;][]{dey2018overview}, the Beijing–Arizona Sky Survey using the Bok telescope at Kitt Peak \citep[BASS;][]{zou2017project}, and the Dark Energy Camera Legacy Survey on the Blanco 4m telescope \citep[DECaLS][]{flaugher2015dark}. The BASS and MzLS surveys observed the same footprint in the North Galactic Cap (NGC) while the DECaLS observed both caps around the galactic plane; the BASS+MzLS footprint is separated from the DECaLS NGC at DEC $> 32.375$ degrees, although there is an overlap between the two regions for calibration purposes \citep{dey2018overview}. Additionally, the DECaLS program integrates observations executed from the same instrument under the Dark Energy Survey \citep{abbott2016dark}, which constitute about $1130 \deg^{2}$ of the South Galactic Cap (SGC) footprint. The DESI imaging catalogs also integrate the $3.4$ (W1) and $4.6$ $\mu m$ (W2) infrared photometry from the Wide-Field Infrared Explorer \citep[WISE;][]{wise2010AJ....140.1868W, meisner2018RNAAS...2....1M}.  
+
 \subsection{DESI imaging LRG sample}
 Our sample of LRGs is drawn from the DESI Legacy Imaging Surveys Data Release 9 \citep[DR9;][]{dey2018overview} using the color-magnitude selection criteria designed for the DESI 1\% survey \mr{(CITE)}, described as the SV3 selection in more detail in \cite{zhou2022target}. The color-magnitude selection cuts are defined in the $g$, $r$, $z$ bands in the optical and $W1$ band in the infrared, as summarized in Tab. \ref{tab:ts}. The selection cuts are developed differently for each imaging survey to reach an almost uniform target surface density despite different survey efficiency and photometric calibration between DECaLS and BASS+MzLS. The implementation of these selection cuts in the DESI data processing pipeline is explained in \cite{myers2022}. Fig. \ref{fig:nz} shows the redshift distribution of the DR9 LRGs (solid black), inferred from the spectroscopic DESI Survey Validation data \mr{(CITE)}, and the evolution of halo bias (red dashed), adopted from \cite{zhou2021clustering}.
 
@@ -54,12 +56,10 @@ Fig. \ref{fig:ng} (bottom) illustrates the imaging templates investigated as pot
  \label{fig:pcc}
 \end{figure}
 
-
-
 Fig. \ref{fig:pcc} shows the Pearson correlation coefficient between the DR9 LRG density and DESI imaging properties for the three imaging surveys (DECaLS North, DECaLS South, and BASS+MzLS) in the top panel. The horizontal curves are constructed from lognormal simulations (see, subsection \ref{ssec:mocks}) to quantify the significance of correlations. Fig. \ref{fig:pcc} (bottom) shows the correlation matrix among imaging properties for the DESI footprint. There is a strong correlation between the LRG density and depth maps, and next correlated properties seem to be Galactic foregrounds. There is a small correlation between the LRG density and the $W1$-band depth and psfsize properties. We observe a significant inner correlation among the imaging properties themselves, especially between the local stellar density and Milky Way extinction; also, the $r$-band and $g$-band survey properties are more correlated with each other than with the $z$-band. We also investigate the correlations using the Spearman-r correlation, but find no significant differences.
 
 \subsubsection{Imaging weights}
-We follow a regression approach to model the spatial dependence of spurious fluctuations in the DR9 density map to the information encoded by the imaging templates. Both linear multivariate and nonlinear regression are applied to assess the level of nonlinear systematic effects. 
+The characterization of potential sources for systematic error in the DESI imaging LRG sample is of paramount importance to DESI success since spectroscopic catalogs could inherit these issues from imaging catalogs, and thus negatively impact DESI science goals. The effects of observational systematics in DESI targets have been studied in great detail \cite[see, e.g.,][]{kitanidis2020imaging, zhou2021clustering, chaussidon2022angular}. Improving techniques to characterize systematic error in these tracers is crucial for the science beyond dark energy, such as constraining $\fnl$ and other features in the primordial power spectrum \citep{beutler2019primordial}. Some of the current methods seek to mitigate systematic effects by either cross-correlating target density and imaging maps (mode deprojection) or solving a least-square optimization to estimate the contribution from each imaging property to target density (template-based regression), ultimately to regress out the modes affected by imaging properties from target density. Another class of methods aims to cross-correlate different tracers of dark matter to enhance inferences by canceling cosmic variance and by reducing the effect of systematic error, as each tracer might respond differently to a source of systematic error \citep[see, e.g.,][]{giannantonio2014improved}. These methods have their limitations and strengths \citep[see, e.g.,][for a review]{2021MNRAS.503.5061W}. For instance, mode deprojection yields an unbiased clustering but can be employed for angular clustering only, and its involved matrix algebra could prove time-consuming for large survey sizes. Template-based regression is on the other hand computationally economic, but it returns biased clustering by removing some of clustering power, depending on the number of input templates and the flexibility of the regression model. Specifically related to the template-based regression method, there is little effort to calibrate and characterize the amount of clustering power removed during the cleaning process. For studies like BAO and RSD, these effects are demonstrated to be negligible \citep{merz2021clustering}; however, these effects introduce significant biases in $\fnl$ constraints \citep{mueller2022primordial} as they highly impact galaxy clustering on large scales \citep{rezaie2021primordial}. We follow a regression approach to model the spatial dependence of spurious fluctuations in the DR9 density map to the information encoded by the imaging templates. Both linear multivariate and nonlinear regression are applied to assess the level of nonlinear systematic effects. 
 
 Regression analyses are performed separately for each imaging survey as our preliminary analysis indicated that each region responds differently to each template (see, e.g., Fig. \ref{fig:pcc} top panel). The optimal parameters associated with the linear and nonlinear models are found by optimizing the negative Poisson log-likelihood, $\lambda - \rho \log(\lambda)$, between the observed galaxy density $\rho$ and the output predicted density $\lambda$ from the models given imaging properties \textbf{x} as input. We do not provide spatial information as input to avoid subtracting clustering signal. With $\lambda(\textbf{x}) = \log (1+e^{f(\textbf{x})})$, we investigate the use of linear multivariate and nonlinear models to approximate $f$. For the linear model, we perform a Monte Carlo Markov Chain (MCMC) search using the \textsc{emcee} package \citep{2013PASP..125..306F} and all of the DR9 data to calculate the Poisson log-likelihood. 
 
