--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -9,12 +9,6 @@ Standard slow-roll inflation predicts $\fnl$ to be of order $10^{-2}$ \citep[see
 The current tightest bound on $\fnl$ comes from the three-point clustering measurement of the CMB temperature anisotropies by the Planck satellite, $\fnl=0.9\pm 5.0$ \citep{akrami2019planck}. Upcoming generations of CMB experiments will improve this constraint, but since CMB is limited by cosmic variance, its data alone cannot enhance statistical precision of $\fnl$ measurements enough to break the degeneracy amongst various inflationary paradigms \citep[see, e.g.,][]{ade2019simons}. Combining CMB with LSS data could cancel cosmic variance, partially if not completely, and improve these results to a precision level needed to differentiate between alternative inflationary scenarios \citep[see, e.g.,][]{schmittfull2018PhRvD}. Constraining $\fnl$ with the three-point clustering of LSS is likewise hindered by the late-time nonlinear systematic effects raised from structure growth, which is non-trivial to account for \citep{baldauf2011galaxy, baldauf2011primordial}. UV Luminosity Function is a novel approach for constraining $\fnl$ by probing galaxy abundances and structure formation on small scales (e.g., $k \sim 2~{\rm Mpc}^{-1}$), which are otherwise impossible to explore with the scale-dependent bias. \cite{sabti2021JCAP} used UV Luminosity Function from the Hubble Space Telescope catalogs \citep{bouwens2015ApJ} to find a $2\sigma$ bound of $-166<\fnl<497$. Even though this is still not competitive with the current bounds from CMB and LSS, upcoming surveys such as the James Webb Space Telescope and the Nancy Grace Roman Space Telescope are forecast to yield up to four times improvements on $
 \fnl$ constraints from UV Luminosity Function. Given these limitations, the scale-dependent bias technique is the smoking gun for constraining local PNG with LSS. With this technique, \cite{mueller2022primordial} analyzed the large-scale clustering of quasars and obtained \mr{XXX} at $65\%$ confidence. \mr{cite recent measurements after eBOSS}.
 
-Measuring $\fnl$ with the scale-dependent bias effect is nonetheless incredibly challenging due to various systematic effects that modulate clustering power on scales where there is a high sensitivity to $\fnl$. These systematics are broadly classified into theoretical and observational. For instance, survey geometry entangles clustering power on different angular modes \citep{beutler2014clustering,wilson2017rapid}. Relativistic effects also generate scale-dependent signatures on large scales, identical to local PNG, which hinder measuring $\fnl$ with the scale-dependent bias effect using higher order multipoles of power spectrum \citep{wang2020}. Similarly, matter density fluctuations with wavelengths larger than survey volume, known as super-sample modes, modulate galaxy power spectrum \citep{castorina2020JCAP}. Another source for systematic error is raised because the mean galaxy density for constructing the density contrast field is estimated from data directly rather than being known a priori. This integral constraint effect pushes clustering power on modes near the survey size to zero \citep{peacock1991large,de2019integral}. Accounting for these effects in modeling power spectrum is crucial to derive unbiased $\fnl$ constraints \citep[see, e.g.,][]{riquelme2022primordial}. 
-
-On the other hand, observational systematics are driven primarily by varying imaging properties across the sky \citep{ross2011} and photometric calibration issues that manifest as spurious fluctuations in the observed density field of galaxies \citep{huterer2013calibration}. This type of systematic error is much more complicated to model and mitigate, compared to integral constraint and survey geometry, and it has hampered previous studies of local PNG with the scale-dependent bias effect in the large-scale clustering of galaxies and quasars \citep[see, e.g.,][]{Ho2015JCAP...05..040H}. For instance, \cite{pullen2013systematic} found that the contribution of stellar density and astronomical seeing is too high for a robust $\fnl$ measurement using the quasar sample from the Sloan Digital Sky Survey Data Release 6. These imaging systematic issues are expected to be severe for wide-area galaxy surveys that observe the night sky closer to the Galactic plane and attempt to implement more relaxed selection criteria to include fainter galaxies \citep[see, e.g,][]{kitanidis2020imaging}. 
-
-\mr{SEEMS OUT OF PLACE} The Dark Energy Spectroscopic Instrument (DESI) uses robotically-driven fibers to collect $5000$ spectra simultaneously and is designed to deliver an unparalleled volume of spectroscopic data that will enable future analyses to deepen our understanding of the energy contents of the universe, specifically, the dynamic of dark energy equation of state \citep{aghamousa2016desi}. Even though the primary focus of DESI is dark energy, assuming imaging systematics are under control, DESI along with other upcoming surveys, such as Rubin Observatory and SphereX, are expected to yield unprecedented constraints on $\fnl$ as well \citep[see, e.g.,][]{Heinrich2022AAS...24020203H}. Luminous red galaxies (LRGs) constitute one of the primary targets for DESI spectroscopy. DESI is designed to collect spectra of millions of LRGs covering the redshift range of $0.4<z<1.0$ throughout its five-year mission. LRGs are massive galaxies that occupy massive halos, lack active star formation, and are one of the highly biased tracers of dark matter gravitational field. A distinct break around 4000 \AA~in the spectrum of LRGs is often utilized to determine their redshifts accurately. LRGs are widely targeted in previous galaxy redshift surveys \citep[see, e.g.,][]{eisenstein2001spectroscopic, prakash2016sdss}, and their clustering and redshift properties are well studied \citep[see, e.g.,][]{ross2020MNRAS.498.2354R, gilmarin2020MNRAS.498.2492G, bautista2021MNRAS.500..736B, chapman2022MNRAS.516..617C}. DESI spectroscopy selects its LRG targets from photometry of three ground-based surveys that observed the sky in the optical $g$, $r$, and $z$ bands between 2014 and 2019: the Mayall $z$-band Legacy Survey using the Mayall telescope at Kitt Peak \citep[MzLS;][]{dey2018overview}, the Beijing–Arizona Sky Survey using the Bok telescope at Kitt Peak \citep[BASS;][]{zou2017project}, and the Dark Energy Camera Legacy Survey on the Blanco 4m telescope \citep[DECaLS][]{flaugher2015dark}. The BASS and MzLS surveys observed the same footprint in the North Galactic Cap (NGC) while the DECaLS observed both caps around the galactic plane; the BASS+MzLS footprint is separated from the DECaLS NGC at DEC $> 32.375$ degrees, although there is an overlap between the two regions for calibration purposes \citep{dey2018overview}. Additionally, the DECaLS program integrates observations executed from the same instrument under the Dark Energy Survey \citep{abbott2016dark}, which constitute about $1130 \deg^{2}$ of the South Galactic Cap (SGC) footprint. The DESI imaging catalogs also integrate the $3.4$ (W1) and $4.6$ $\mu m$ (W2) infrared photometry from the Wide-Field Infrared Explorer \citep[WISE;][]{wise2010AJ....140.1868W, meisner2018RNAAS...2....1M}.  
-
-The characterization of potential sources for systematic error in the DESI imaging LRG sample is of paramount importance to DESI success since spectroscopic catalogs could inherit these issues from imaging catalogs, and thus negatively impact DESI science goals. The effects of observational systematics in DESI targets have been studied in great detail \cite[see, e.g.,][]{kitanidis2020imaging, zhou2021clustering, chaussidon2022angular}. Improving techniques to characterize systematic error in these tracers is crucial for the science beyond dark energy, such as constraining $\fnl$ and other features in the primordial power spectrum \citep{beutler2019primordial}. Some of the current methods seek to mitigate systematic effects by either cross-correlating target density and imaging maps (mode deprojection) or solving a least-square optimization to estimate the contribution from each imaging property to target density (template-based regression), ultimately to regress out the modes affected by imaging properties from target density. Another class of methods aims to cross-correlate different tracers of dark matter to enhance inferences by canceling cosmic variance and by reducing the effect of systematic error, as each tracer might respond differently to a source of systematic error \citep[see, e.g.,][]{giannantonio2014improved}. These methods have their limitations and strengths \citep[see, e.g.,][for a review]{2021MNRAS.503.5061W}. For instance, mode deprojection yields an unbiased clustering but can be employed for angular clustering only, and its involved matrix algebra could prove time-consuming for large survey sizes. Template-based regression is on the other hand computationally economic, but it returns biased clustering by removing some of clustering power, depending on the number of input templates and the flexibility of the regression model. Specifically related to the template-based regression method, there is little effort to calibrate and characterize the amount of clustering power removed during the cleaning process. For studies like BAO and RSD, these effects are demonstrated to be negligible \citep{merz2021clustering}; however, these effects introduce significant biases in $\fnl$ constraints \citep{mueller2022primordial} as they highly impact galaxy clustering on large scales \citep{rezaie2021primordial}.  
+Measuring $\fnl$ with the scale-dependent bias effect is nonetheless incredibly challenging due to various systematic effects that modulate clustering power on scales where there is a high sensitivity to $\fnl$. These systematics are broadly classified into theoretical and observational. For instance, survey geometry entangles clustering power on different angular modes \citep{beutler2014clustering,wilson2017rapid}. Relativistic effects also generate scale-dependent signatures on large scales, identical to local PNG, which hinder measuring $\fnl$ with the scale-dependent bias effect using higher order multipoles of power spectrum \citep{wang2020}. Similarly, matter density fluctuations with wavelengths larger than survey volume, known as super-sample modes, modulate galaxy power spectrum \citep{castorina2020JCAP}. Another source for systematic error is raised because the mean galaxy density for constructing the density contrast field is estimated from data directly rather than being known a priori. This integral constraint effect pushes clustering power on modes near the survey size to zero \citep{peacock1991large,de2019integral}. Accounting for these effects in modeling power spectrum is crucial to derive unbiased $\fnl$ constraints \citep[see, e.g.,][]{riquelme2022primordial}. On the other hand, observational systematics are driven primarily by varying imaging properties across the sky \citep{ross2011} and photometric calibration issues that manifest as spurious fluctuations in the observed density field of galaxies \citep{huterer2013calibration}. This type of systematic error is much more complicated to model and mitigate, compared to integral constraint and survey geometry, and it has hampered previous studies of local PNG with the scale-dependent bias effect in the large-scale clustering of galaxies and quasars \citep[see, e.g.,][]{Ho2015JCAP...05..040H}. For instance, \cite{pullen2013systematic} found that the contribution of stellar density and astronomical seeing is too high for a robust $\fnl$ measurement using the quasar sample from the Sloan Digital Sky Survey Data Release 6. These imaging systematic issues are expected to be severe for wide-area galaxy surveys that observe the night sky closer to the Galactic plane and attempt to implement more relaxed selection criteria to include fainter galaxies \citep[see, e.g,][]{kitanidis2020imaging}. 
  
 This paper presents robust constraints on $\fnl$ using the large-scale clustering of photometric galaxies from DESI imaging with exquisite emphasis on the treatment of imaging systematic error and mitigation biases. We measure the significance of residual systematic error in our data using angular cross-power spectrum (between galaxy density and imaging properties) and mean density contrast of galaxies. Specifically, the robustness of our results is validated against various sources of systematic error, including but not limited to photometric calibration and Milky Way foregrounds. We cross-correlate the density map of galaxies with the template maps of imaging properties to evaluate the effectiveness of different treatment methods and to characterize the significance level of remaining systematic error. Various linear and nonlinear data cleaning approaches are applied with different combinations of imaging templates to quantify the sensitivity of $\fnl$ constraints to alternative foreground removal methods. The redshift distribution of galaxies for modeling power spectrum is determined by early spectroscopy from the DESI Survey Validation. This paper is structured as follows. Section \ref{sec:data} describes the sample of LRGs from DESI imaging and lognormal simulations of galaxy density field with and without PNG and imaging systematic effects. Section \ref{sec:method} outlines the theoretical framework for modeling angular power spectrum and analysis techniques to account for various observational and theoretical systematic error. Finally, we present $\fnl$ constraints in Section \ref{sec:results}, and conclude with a comparison to previous $\fnl$ studies in Section \ref{sec:conclusion}.
